# wasmfunc

./: .gitignore  MANIFEST.in  README.md  add.py  pygwasm.py  pyproject.toml  runWasmGC.js  setup.py  test.py
examples/: add.py  assignments.py  comparators.py  control_flow.py  division.py  fib.py  float_operations.py  gc_lists.py  gc_pancake.py  gc_str_string.py  globals.py  import.py  int_operations.py  lists.py  local_variables.py  pydigits.py  test.py  toosimple.py
py2wasm/: compiler.py  decorators.py  file_handler.py  pre_compiler.py  types.py
pygwasm/: __init__.py  __main__.py  compiler.py  decorators.py  file_handler.py  pygwasm.py  types.py
pygwasm/compiler/: __init__.py  _imports.py  _variables.py
tests/: framework.py  test_example_fib.py  test_example_import.py  test_example_int_operations.py  test_examples.py  test_runner.py
wasmfunc/: __main__.py  compiler.py  decorators.py  file_handler.py  mini_std.py  pre_compiler.py  runWasmGC.js  types.py
