[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygwasm"
authors = [
    {name = "Jonathan Hargreaves", email = "jhargreaves189@gmail.com"},
]
description = "A basic Wasm compiler for Python"
requires-python = ">=3.11"
dependencies = [
    # 'binaryenpy >= 0.0.1',
]
version = "0.0.1"